<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:weightSum="3"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@drawable/bghs">

    <TextView
        android:text="@string/new_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textAlignment="center"
        android:id="@+id/tvDifficult"
        android:layout_marginTop="50dp" />

    <Button
        android:text="@string/easy_label"
        android:layout_height="wrap_content"
        android:id="@+id/btnEasy"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        tools:background="@drawable/btnm"
        android:background="@drawable/btnm"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/medium_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMedium"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnEasy"
        android:layout_alignStart="@+id/btnEasy"
        tools:background="@drawable/btnm"
        android:background="@drawable/btnm"
        android:layout_marginBottom="15dp"
        android:textSize="20sp" />

    <Button
        android:text="@string/hard_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnHard"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnEasy"
        android:layout_alignStart="@+id/btnEasy"
        android:background="@drawable/btnm"
        tools:background="@drawable/btnm"
        android:layout_marginBottom="100dp"
        android:textSize="20dp" />

</LinearLayout>
